[project]
name = "neode"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andrew Chang", email = "aychang995@gmail.com" }
]
requires-python = ">=3.9"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
